[package]
name = "krokiet"
version = "11.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "Slint frontend of Czkawka Core"
license = "GPL-3.0-only"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
czkawka_core = { version = "11.0.0", path = "../czkawka_core" }
chrono = "0.4.38"
open = "5.3"
crossbeam-channel = "0.5"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
home = "0.5"
log = "0.4.22"
serde = "1.0"
serde_json = "1.0"
humansize = "2.1"
image = "0.25"
rayon = "1.10"
fs_extra = "1.3" # TODO replace with less buggy library
fast_image_resize = { version = "6.0.0", features = ["image"] }
num_enum = "0.7.5"

# Translations
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8.5", features = ["debug-embed"] }


# Easier cross-compilation of app to e.g. 32 bit os, by using dlopen instead of linking libraries at compile time
fontique = { version = "0.7.0", default-features = false, features = ["fontconfig-dlopen"] }

# Try to use only needed features from https://github.com/slint-ui/slint/blob/master/api/rs/slint/Cargo.toml#L23-L31
#slint = { path = "/home/rafal/test/slint/api/rs/slint/", default-features = false, features = ["std",
#slint = { git = "https://github.com/slint-ui/slint.git", default-features = false, features = [
slint = { version = "1.15.0", default-features = false, features = [
    "std",
    "backend-winit",
    "compat-1-2"
] }

rodio = { version = "0.21.1", default-features = false, features = ["playback", "symphonia-all"], optional = true }

[build-dependencies]
#slint-build = { path = "/home/rafal/test/slint/api/rs/build/"}
#slint-build = { git = "https://github.com/slint-ui/slint.git" }
slint-build = "1.15"
winresource = "0.1"

[features]
default = ["winit_femtovg", "winit_software"]
audio = ["rodio"]
add_windows_icon = []
skia_opengl = ["slint/renderer-skia-opengl"]
skia_vulkan = ["slint/renderer-skia-vulkan"]
software = ["slint/renderer-software"]
femtovg = ["slint/renderer-femtovg"]
winit_femtovg = ["slint/renderer-winit-femtovg"]
winit_skia_opengl = ["slint/renderer-winit-skia-opengl"]
winit_skia_vulkan = ["slint/renderer-winit-skia-vulkan"]
winit_software = ["slint/renderer-winit-software"]

heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["czkawka_core/xdg_portal_trash"]

[lints]
workspace = true
